--- a/hiking_club_frontend/src/styles/HikeDetails.css
+++ b/hiking_club_frontend/src/styles/HikeDetails.css
@@ -1,4 +1,5 @@
 .hikeDetail-container {
+ 
   display: flex;
   justify-content: center;
   align-items: center;
@@ -8,6 +9,7 @@
 }
 
 .hikeDetail-card {
+  margin-top: 0;
   background-color: white;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
