--- a/hiking_club_frontend/src/styles/Header.css
+++ b/hiking_club_frontend/src/styles/Header.css
@@ -43,6 +43,12 @@
   color: #045d42;
 }
 
+.nav-links a.active {
+  color: #045d42 !important;
+  font-weight: bold;
+  border-bottom: 2px solid #045d42; /* Optional: underline effect */
+}
+
 /* Profile Section */
 .profile {
   display: flex;
