--- a/hiking_club_frontend/src/styles/Profile.css
+++ b/hiking_club_frontend/src/styles/Profile.css
@@ -19,7 +19,7 @@
 
 /* Title */
 .profile-title {
-  margin-top: 40px; /* Increase margin-top to create space */
+  margin-top: 60px; /* Increase margin-top to create space */
   font-size: 45px;
   font-weight: 700;
   color: #2e4057;
@@ -171,6 +171,7 @@
 }
 
 /* Modal Styling */
+/* Modal Styling */
 .modal {
   position: fixed;
   top: 0;
@@ -181,19 +182,20 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  overflow: hidden; /* Prevent outer scrollbar */
 }
 
+/* Modal Content */
 .modal-content {
   background: #fff;
   padding: 25px;
   border-radius: 15px;
   width: 400px;
   max-height: 80vh;
-  overflow-y: auto;
+  overflow: hidden; /* Ensure no external scrollbar */
   box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1);
   animation: fadeIn 0.4s ease;
 }
-
 .modal h3 {
   text-align: center;
   margin-bottom: 20px;
@@ -249,7 +251,7 @@
   color: white;
   padding: 12px;
   font-size: 16px;
-  margin-top: 20px;
+  margin-top: 5px;
   border: none;
   border-radius: 30px;
   cursor: pointer;
