--- a/hiking_club_frontend/src/styles/Profile.css
+++ b/hiking_club_frontend/src/styles/Profile.css
@@ -143,7 +143,7 @@
 }
 
 .editable-input:focus {
-  border: 1px solid #42AC3;
+  border: 1px solid #42AC3C;
   background-color: #fff;
   box-shadow: 0 4px 10px rgba(86, 193, 165, 0.3);
 }
@@ -257,7 +257,7 @@
 }
 
 .save-button:hover {
-  background-color:  ;
+  background-color: white ;
   transform: translateY(-5px);
 }
 
