--- a/hiking_club_frontend/src/styles/ApplicantDetails.css
+++ b/hiking_club_frontend/src/styles/ApplicantDetails.css
@@ -5,6 +5,7 @@
     justify-content: center;
     min-height: 100vh;
     background-color: white;
+    padding: 100px 10px 40px 10px;
 }
 
 .ApplicantDetails h2 {
