--- a/hiking_club_frontend/src/styles/DashboardComponent.css
+++ b/hiking_club_frontend/src/styles/DashboardComponent.css
@@ -1,8 +1,8 @@
 .dashboard-header .members-header {
     display: flex;
-    justify-content: space-between;
     align-items: center;
-
+    justify-content: flex-start;
+    padding-top: 25px;
 }
 
 
@@ -18,6 +18,7 @@
     background-color: white;
     border: none;
     font-size: large;
+    padding: 0px 20px;
     
 }
 
