--- a/hiking_club_frontend/src/styles/Header.css
+++ b/hiking_club_frontend/src/styles/Header.css
@@ -54,7 +54,7 @@
     display: flex;
     align-items: center;
     padding: 10px;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     border-radius: 50px;
   }
   
